# Test

./: CMakeLists.txt  build.ps1  configure.ps1  external_libs_example.cpp  mylib.cpp  mylib.h
cmake/: PACKAGING.md  PACKAGING_QUICKREF.md  README.md  output_helper.cmake  qtcommon.cmake  run_tests.cmake
docs/: EXTERNAL_LIBS.md  EXTERNAL_LIBS_SUMMARY.md  GTEST_README.md  GTEST_USAGE.md
tests/: CMakeLists.txt  test_mylib.cpp
